[package]
name = "mango-tree"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mango_tree"
doctest = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]
custom-heap = []

[dependencies]
bincode = "1.3.3"
bytemuck = { version = "^1.7.2", features = ["min_const_generics"] }
num_enum = "0.5.1"
static_assertions = "1.1"
serde_json = "1"
anyhow = "1"
rand = "0.8.4"
anchor-lang = "0.28.0"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango", features = [
    "serde",
    "borsh",
    "debug-assert-in-release",
] }
itertools = "0.10.3"
solana-program = "~1.16.7"

[profile.release]
overflow-checks = true