[package]
name = "mango-tree"
version = "0.1.0"
edition = "2021"

[lib]
name = "sokoban"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
bytemuck = { version = "^1.7.2", features = ["min_const_generics", "derive"] }
thiserror = "1.0.38"
num-derive = "0.3.3"
num-traits = "0.2.15"
num_enum = "0.5.1"
static_assertions = "1.1"

[dev-dependencies]
rand_distr = "0.4.3"
itertools = "0.10.3"
rand = "0.7"
tokio = { version = "1.8.4", features = ["full"] }